--- a/asivamosffie.web/asivamosffie/src/app/_pages/contratos-modificaciones-contractuales/components/form-modificacion-contractual/form-modificacion-contractual.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/contratos-modificaciones-contractuales/components/form-modificacion-contractual/form-modificacion-contractual.component.html
@@ -12,7 +12,7 @@
       </ng-container>
       <ng-template #noEsVerDetalle>
           Gestionar solicitud {{ dataNovedad.numeroSolicitud }}
-      </ng-template>  
+      </ng-template>
     </h1>
   </div>
   <div class="text-center flex">
@@ -24,11 +24,11 @@
       <mat-card-content>
        <div  *ngIf="dataNovedad['sesionComiteSolicitud'][0].comiteTecnicoFiduciario != 'undefined' && dataNovedad['sesionComiteSolicitud'][0].comiteTecnicoFiduciario != null">
           <p><b>Número de comité fiduciario</b>:{{ dataNovedad['sesionComiteSolicitud'][0].comiteTecnicoFiduciario.numeroComite }}</p>
-          <p><b>Fecha de comité fiduciario</b>: {{ dataNovedad['sesionComiteSolicitud'][0].comiteTecnicoFiduciario.fechaOrdenDia | date: 'dd/MM/yyyy' }}</p>  
+          <p><b>Fecha de comité fiduciario</b>: {{ dataNovedad['sesionComiteSolicitud'][0].comiteTecnicoFiduciario.fechaOrdenDia | date: 'dd/MM/yyyy' }}</p>
         </div>
         <div *ngIf="dataNovedad['sesionComiteSolicitud'][0].comiteTecnico != 'undefined' && dataNovedad['sesionComiteSolicitud'][0].comiteTecnico != null">
           <p><b>Número de comité técnico</b>:{{ dataNovedad['sesionComiteSolicitud'][0].comiteTecnico.numeroComite }}</p>
-          <p><b>Fecha de comité técnico</b>: {{ dataNovedad['sesionComiteSolicitud'][0].comiteTecnico.fechaOrdenDia | date: 'dd/MM/yyyy' }}</p>  
+          <p><b>Fecha de comité técnico</b>: {{ dataNovedad['sesionComiteSolicitud'][0].comiteTecnico.fechaOrdenDia | date: 'dd/MM/yyyy' }}</p>
         </div>
       </mat-card-content>
   </mat-card>
@@ -85,12 +85,15 @@
             <mat-card-content>
               <p><b>Número de la solicitud de modificación</b>: {{ dataNovedad.numeroSolicitud }}</p>
               <p><b>Tipo de modificación</b>: {{ tipoModificacion }}</p>
-              <p><b>URL con soporte</b>: {{ dataNovedad.urlSoporteGestionar }}</p>  
+              <p><b>URL con soporte</b>: {{ dataNovedad.urlSoporteGestionar }}</p>
               <div *ngFor="let element of dataNovedad.novedadContractualDescripcion; let f = index">
                 <h3 *ngIf="dataNovedad?.novedadContractualDescripcion.length > 1"><b>Novedad {{ f+1 }}</b></h3>
-                <p *ngIf="element.tipoNovedadCodigo === this.tipoNovedad.adicion"><b>Valor después de la modificación</b>:{{element.presupuestoAdicionalSolicitado | currency:'':'symbol':'3.0'}}</p>
-                <p *ngIf="element.tipoNovedadCodigo === this.tipoNovedad.prorroga"><b>Plazo después de la modificación</b>: 
-                  <span *ngIf="element.plazoAdicionalDias != null && element.plazoAdicionalMeses != null ">{{element.plazoAdicionalMeses + dataNovedad.contrato.contratacion.disponibilidadPresupuestal[0].plazoMeses }} meses / {{element.plazoAdicionalDias + dataNovedad.contrato.contratacion.disponibilidadPresupuestal[0].plazoDias }}días</span></p>
+                <p *ngIf="element.tipoNovedadCodigo === this.tipoNovedad.adicion"><b>Valor inicial del contrato</b>: {{ dataNovedad?.contrato?.contratacion?.disponibilidadPresupuestal[0]?.valorSolicitud | currency:'COP':'symbol-narrow':'.0-0' }}</p>
+                <p *ngIf="element.tipoNovedadCodigo === this.tipoNovedad.adicion"><b>Valor adicionado</b>: {{ element.presupuestoAdicionalSolicitado | currency:'':'symbol':'3.0'}}</p>
+                <p *ngIf="element.tipoNovedadCodigo === this.tipoNovedad.adicion"><b>Valor después de la modificación</b>: {{ (element.presupuestoAdicionalSolicitado + dataNovedad?.contrato?.contratacion?.disponibilidadPresupuestal[0]?.valorSolicitud) | currency:'':'symbol':'3.0'}}</p>
+                <p *ngIf="element.tipoNovedadCodigo === this.tipoNovedad.prorroga"><b>Plazo inicial del contrato</b>: <span *ngIf="dataNovedad?.contrato?.contratacion?.plazoContratacion != null ">{{ dataNovedad?.contrato?.contratacion?.plazoContratacion?.plazoMeses }} meses / {{ dataNovedad?.contrato?.contratacion?.plazoContratacion?.plazoDias }} días</span></p>
+                <p *ngIf="element.tipoNovedadCodigo === this.tipoNovedad.prorroga"><b>Plazo adicionado</b>: <span *ngIf="element.plazoAdicionalDias != null && element.plazoAdicionalMeses != null ">{{element?.plazoAdicionalMeses }} meses / {{element?.plazoAdicionalDias }} días</span></p>
+                <p *ngIf="element.tipoNovedadCodigo === this.tipoNovedad.prorroga"><b>Plazo después de la modificación</b>: <span *ngIf="element.plazoAdicionalDias != null && element.plazoAdicionalMeses != null ">{{element.plazoAdicionalMeses + dataNovedad?.contrato?.contratacion?.plazoContratacion?.plazoMeses }} meses / {{ element.plazoAdicionalDias + dataNovedad?.contrato?.contratacion?.plazoContratacion?.plazoDias }} días</span></p>
                 <p *ngIf="element.tipoNovedadCodigo === this.tipoNovedad.suspension || element.tipoNovedadCodigo === this.tipoNovedad.prorroga_a_las_Suspension"><b>Fecha de inicio de la suspensión</b>: {{ element.fechaInicioSuspension | date: 'dd/MM/yyyy' }}</p>
                 <p *ngIf="element.tipoNovedadCodigo === this.tipoNovedad.suspension || element.tipoNovedadCodigo === this.tipoNovedad.prorroga_a_las_Suspension"><b>Fecha final de la suspensión</b>: {{ element.fechaFinSuspension | date: 'dd/MM/yyyy' }}</p>
                 <p *ngIf="element.tipoNovedadCodigo === this.tipoNovedad.reinicio"><b>Fecha de inicio del reinicio</b>: {{ element.fechaInicioSuspension | date: 'dd/MM/yyyy' }}</p>
@@ -99,10 +102,10 @@
                   <b>Cláusula</b>:<span [innerHTML]="element?.novedadContractualClausula[0].clausulaAmodificar"></span>
                   <b>Ajuste</b>:<span [innerHTML]="element?.novedadContractualClausula[0].ajusteSolicitadoAclausula"></span>
                 </p>
-                <p><b>Detalle de la modificación</b>: <span [innerHTML]="element.resumenJustificacion"></span></p>  
+                <p><b>Detalle de la modificación</b>: <span [innerHTML]="element.resumenJustificacion"></span></p>
               </div>
               <h2 class="card-subTitle back-color" *ngIf="adicionBoolean">Aportantes</h2>
-              
+
               <div *ngFor="let aportante of dataNovedad.novedadContractualAportante; let i = index">
                 <section>
                   <h1 style="margin-bottom: .2em;margin-top: 1em;"><b>Aportante {{ i+1 }}</b></h1>
@@ -119,7 +122,7 @@
                   </div>
                 </section>
               </div>
-        
+
             </mat-card-content>
           </mat-card>
         </div>
