--- a/asivamosffie.web/asivamosffie/src/app/_pages/contratos-modificaciones-contractuales/components/tabla-proceso-firmas/tabla-proceso-firmas.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/contratos-modificaciones-contractuales/components/tabla-proceso-firmas/tabla-proceso-firmas.component.html
@@ -22,16 +22,13 @@
     <ng-container matColumnDef="estadoRegistro">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado del registro </th>
       <td mat-cell *matCellDef="let element" align="center">
-        <div class="flex-span" *ngIf="(element.contratacion.estadoSolicitudCodigo === estadoCodigos.enFirmaFiduciaria) 
-                                    || (element.contratacion.estadoSolicitudCodigo === estadoCodigos.enFirmaContratista)
-                                    || (element.estadoCodigo === estadoCodigos.firmadoNovedad && element.estadoDelRegistro == 'Incompleto')">
+        <div class="flex-span" *ngIf="element.registroCompletoNew == false">
           <span class="info-text sin-diligenciar mr-auto"></span>
           <span>
             Incompleto
           </span>
         </div>
-        <div class="flex-span" *ngIf="element.contratacion.estadoSolicitudCodigo === estadoCodigos.firmado 
-        || (element.estadoCodigo === estadoCodigos.firmadoNovedad && element.estadoDelRegistro == 'Completo')">
+        <div class="flex-span" *ngIf="element.registroCompletoNew == true">
           <span class="info-text completo mr-auto"></span>
           <span>
             Completo
@@ -50,9 +47,13 @@
         <div *ngIf="element.estadoCodigo === estadoCodigos.enFirmaFiduciaria">
           En firma de la fiduciaria
         </div>
-        <div *ngIf="element.estadoCodigo === estadoCodigos.firmado 
-        || element.estadoCodigo === estadoCodigos.firmadoNovedad">
+        <div *ngIf="(element.estadoCodigo === estadoCodigos.firmado || element.estadoCodigo === estadoCodigos.firmadoNovedad)
+        && element.registroCompletoNew == true">
           Firmado
+        </div>
+        <div *ngIf="(element.estadoCodigo === estadoCodigos.firmado || element.estadoCodigo === estadoCodigos.firmadoNovedad)
+          && element.registroCompletoNew == false">
+           En proceso de firmas
         </div>
       </td>
     </ng-container>
@@ -65,8 +66,8 @@
                 color="accent"
                 class="btn-table"
                 (click)="gestionar( element.tipoSolicitud, element.solicitudId, element.contratacion.estadoSolicitudCodigo )"
-                *ngIf="(element.contratacion.estadoSolicitudCodigo === estadoCodigos.enFirmaFiduciaria) 
-                || (element.contratacion.estadoSolicitudCodigo === estadoCodigos.enFirmaContratista) 
+                *ngIf="(element.contratacion.estadoSolicitudCodigo === estadoCodigos.enFirmaFiduciaria)
+                || (element.contratacion.estadoSolicitudCodigo === estadoCodigos.enFirmaContratista)
                 || (element.contratacion.estadoSolicitudCodigo === estadoCodigos.firmado)
                 || (element.estadoCodigo === estadoCodigos.firmadoNovedad)
                 ">
@@ -76,7 +77,7 @@
         <button mat-raised-button
                 color="accent"
                 class="btn-table"
-                *ngIf="element.contratacion.estadoSolicitudCodigo === estadoCodigos.firmado 
+                *ngIf="element.contratacion.estadoSolicitudCodigo === estadoCodigos.firmado
                 || (element.estadoCodigo === estadoCodigos.firmadoNovedad && element.estadoDelRegistro == 'Completo')"
                 (click)="cambioEstadoRegistrado( element )">
                 Registrar
