--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/plantilla/plantilla.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/plantilla/plantilla.component.html
@@ -6,7 +6,7 @@
     <img
       src="assets/img/pdf/informe-esmanal/image001.png"
       alt="Fondo de financiamiento de infraestructura educativa"
-      style="height: 50px; margin-right: 10px;"
+      style="height: 50px; margin-right: 10px"
     />
   </div>
   <h1 style="text-align: center; font-size: 20px; font-weight: 700">
@@ -91,14 +91,18 @@
         </tr>
         <tr>
           <td style="border: solid 1px #000; background-color: #deeaf6; font-weight: 700" colspan="2">PROYECTO</td>
-          <td style="border: solid 1px #000" colspan="2"></td>
+          <td style="border: solid 1px #000" colspan="2">
+            <div *ngFor="let proyecto of solicitudPago.contratoSon.tablaDRPODG[0].listDyProyectos">
+              <p style="margin-bottom: 0;">{{ proyecto.nombre }}</p>
+            </div>
+          </td>
           <td style="border: solid 1px #000" colspan="3" rowspan="2"></td>
         </tr>
         <tr>
           <td style="border: solid 1px #000; background-color: #deeaf6; font-weight: 700" colspan="2">LLAVE MEN</td>
           <td style="border: solid 1px #000" colspan="2">
             <div *ngFor="let contratacionProyecto of solicitudPago.contratoSon.contratacion.contratacionProyecto">
-              <p>{{ contratacionProyecto.proyecto.llaveMen }}</p>
+              <p style="margin-bottom: 0;">{{ contratacionProyecto.proyecto.llaveMen }}</p>
             </div>
           </td>
         </tr>
@@ -187,37 +191,31 @@
           </td>
           <td style="border: solid 1px #000">
             <span *ngIf="infoPlantilla && infoPlantilla[0] != false; else cero">{{
-              infoPlantilla[i][2]
-                ? infoPlantilla[i][2].valorDescuento
-                : 0 + infoPlantilla[i][1]
-                ? infoPlantilla[i][1].valorDescuento
-                : 0 + infoPlantilla[i][0]
-                ? infoPlantilla[i][0].valorDescuento
-                : (0 | currency: '':'symbol-narrow':'.0-0')
+              descuentos.valorTotal | currency: '':'symbol-narrow':'.0-0'
             }}</span
             ><ng-template #cero>$0</ng-template>
           </td>
           <td style="border: solid 1px #000">
             <span *ngIf="infoPlantilla && infoPlantilla[0] != false; else cero">{{
-              infoPlantilla[i][0] ? infoPlantilla[i][0].valorDescuento : (0 | currency: '':'symbol-narrow':'.0-0')
+              descuentos.retegarantia | currency: '':'symbol-narrow':'.0-0'
             }}</span
             ><ng-template #cero>$0</ng-template>
           </td>
           <td style="border: solid 1px #000">
             <span *ngIf="infoPlantilla && infoPlantilla[0] != false; else cero">{{
-              infoPlantilla[i][1] ? infoPlantilla[i][1].valorDescuento : (0 | currency: '':'symbol-narrow':'.0-0')
+              descuentos.ans | currency: '':'symbol-narrow':'.0-0'
             }}</span
             ><ng-template #cero>$0</ng-template>
           </td>
           <td style="border: solid 1px #000">
             <span *ngIf="infoPlantilla && infoPlantilla[0] != false; else cero">{{
-              infoPlantilla[i][2] ? infoPlantilla[i][2].valorDescuento : (0 | currency: '':'symbol-narrow':'.0-0')
+              descuentos.otrosDescuentos | currency: '':'symbol-narrow':'.0-0'
             }}</span
             ><ng-template #cero>$0</ng-template>
           </td>
           <td style="border: solid 1px #000">
             <span *ngIf="solicitudPago.ordenGiro.valorNetoGiro">{{
-              solicitudPago.ordenGiro.valorNetoGiro | currency: '':'symbol-narrow':'.0-0'
+              valorNetoGiro | currency: '':'symbol-narrow':'.0-0'
             }}</span>
           </td>
 
@@ -271,46 +269,6 @@
         </tr> -->
         <tr>
           <td style="border: solid 1px #000" colspan="10">FIRMAS AUTORIZADAS</td>
-          <td style="border: solid 1px #000">
-            {{
-              solicitudPago.contratoSon.solicitudPagoOnly.solicitudPagoRegistrarSolicitudPago[0].solicitudPagoFase[0]
-                .solicitudPagoFaseCriterio[0].solicitudPagoFaseCriterioConceptoPago[0].valorFacturadoConcepto
-                | currency: '':'symbol-narrow':'.0-0'
-            }}
-          </td>
-          <td style="border: solid 1px #000">
-            <span *ngIf="infoPlantilla && infoPlantilla[0] != false; else cero">{{
-              infoPlantilla[0][2]
-                ? infoPlantilla[0][2].valorDescuento
-                : 0 + infoPlantilla[0][1]
-                ? infoPlantilla[0][1].valorDescuento
-                : 0 + infoPlantilla[0][0]
-                ? infoPlantilla[0][0].valorDescuento
-                : (0 | currency: '':'symbol-narrow':'.0-0')
-            }}</span
-            ><ng-template #cero>$0</ng-template>
-          </td>
-          <td style="border: solid 1px #000">
-            <span *ngIf="infoPlantilla && infoPlantilla[0] != false; else cero">{{
-              infoPlantilla[0][0] ? infoPlantilla[0][0].valorDescuento : (0 | currency: '':'symbol-narrow':'.0-0')
-            }}</span
-            ><ng-template #cero>$0</ng-template>
-          </td>
-          <td style="border: solid 1px #000">
-            <span *ngIf="infoPlantilla && infoPlantilla[0] != false; else cero">{{
-              infoPlantilla[0][1] ? infoPlantilla[0][1].valorDescuento : (0 | currency: '':'symbol-narrow':'.0-0')
-            }}</span
-            ><ng-template #cero>$0</ng-template>
-          </td>
-          <td style="border: solid 1px #000">
-            <span *ngIf="infoPlantilla && infoPlantilla[0] != false; else cero">{{
-              infoPlantilla[0][2] ? infoPlantilla[0][2].valorDescuento : (0 | currency: '':'symbol-narrow':'.0-0')
-            }}</span
-            ><ng-template #cero>$0</ng-template>
-          </td>
-          <td style="border: solid 1px #000">
-            <span>{{ solicitudPago.ordenGiro.valorNetoGiro | currency: '':'symbol-narrow':'.0-0' }}</span>
-          </td>
         </tr>
       </tbody>
     </table>
