--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/gestionar-solicitud-rlc/gestionar-solicitud-rlc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/gestionar-solicitud-rlc/gestionar-solicitud-rlc.component.html
@@ -64,9 +64,9 @@
             </mat-expansion-panel-header>
 
             <div class="container text-center" style="margin-top: 1em;">
-                <button mat-raised-button color="accent">
-                    Descargar acta
-                </button>
+                <a target="_blank" [href]="contrato.rutaDocumento" mat-raised-button color="accent">
+                    Visualizar
+                </a>
             </div>
         </mat-expansion-panel>
     </mat-accordion>
