--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/tabla-consultar-editar-bitacora/tabla-consultar-editar-bitacora.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/tabla-consultar-editar-bitacora/tabla-consultar-editar-bitacora.component.html
@@ -53,37 +53,45 @@
           <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado de las muestras </th>
           <td mat-cell *matCellDef="let element" align="center"> {{ element.estadoMuestrasReporteSemanal }} </td>
         </ng-container>
-  
+
         <ng-container matColumnDef="gestion">
           <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 15%;"> Gestión </th>
           <td mat-cell *matCellDef="let element">
             <button mat-raised-button
-                    color="accent" 
+                    color="accent"
                     class="btn-table"
                     *ngIf="element.registroCompletoMuestras === true"
                     [routerLink]="[ 'verDetalleAvanceSemanal', element.seguimientoSemanalId ]">
                     Ver detalle
             </button>
             <button mat-raised-button
-                    color="accent" 
+                    color="accent"
                     class="btn-table"
                     *ngIf="element.registroCompletoMuestras === false"
                     [routerLink]="[ 'verDetalleAvanceSemanalMuestras', element.seguimientoSemanalId ]">
                     Ver detalle/Editar
             </button>
             <button mat-raised-button
-                    color="accent" 
+                    color="accent"
                     class="btn-table"
                     (click)="enviarMuestrasVerificacion( element.seguimientoSemanalId )"
                     *ngIf="element.registroCompletoMuestra === true">
                     Enviar muestras a verificación
             </button>
+            <a mat-raised-button
+              color="accent"
+              class="btn-table"
+
+              [routerLink]="[ 'informeSemanal', 0, element.seguimientoSemanalId ]"
+            >
+            Informe Semanal
+            </a>
           </td>
         </ng-container>
-  
+
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
-  
+
     <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
 </section>
